[gd_scene load_steps=10 format=3 uid="uid://xi1op1ppabul"]

[ext_resource type="Script" uid="uid://b5rtmwjt4jf5x" path="res://ui/camp_menu/camp_menu.gd" id="1_dwtyw"]
[ext_resource type="PackedScene" uid="uid://c6kk3x7wdbl0u" path="res://ui/camp_menu/camp_character_status_box.tscn" id="1_nr3ij"]
[ext_resource type="Texture2D" uid="uid://4tgxvu4fo1h1" path="res://ui/common/sprite/text_box.png" id="2_fmm2y"]
[ext_resource type="Texture2D" uid="uid://dgdkiifam4f85" path="res://entities/bullet/bullet.png" id="3_ix0wu"]
[ext_resource type="PackedScene" uid="uid://dq5bvoaxuu83w" path="res://ui/main_menu/options/options_menu.tscn" id="5_fdbx0"]
[ext_resource type="PackedScene" uid="uid://b7ijfs16qlhfq" path="res://ui/camp_menu/inventory/consumables_menu.tscn" id="6_mk1em"]
[ext_resource type="PackedScene" uid="uid://t8a24hya7sa5" path="res://ui/camp_menu/inventory/gear/armour_menu.tscn" id="7_d1inv"]
[ext_resource type="PackedScene" uid="uid://dby5xfsflbd4p" path="res://ui/camp_menu/inventory/gear/weapon_menu.tscn" id="8_lsime"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpliy"]
bg_color = Color(0, 0, 0, 1)

[node name="CampMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dwtyw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hpliy")

[node name="PartyStatus" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.390625
anchor_top = 0.0208333
anchor_right = 0.96875
anchor_bottom = 0.979167
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 125
theme_override_constants/v_separation = 15
columns = 2
metadata/_edit_use_anchors_ = true

[node name="CampCharacterStatusBox" parent="PartyStatus" instance=ExtResource("1_nr3ij")]
layout_mode = 2

[node name="CampCharacterStatusBox2" parent="PartyStatus" instance=ExtResource("1_nr3ij")]
layout_mode = 2
party_index = 1

[node name="CampCharacterStatusBox3" parent="PartyStatus" instance=ExtResource("1_nr3ij")]
layout_mode = 2
party_index = 2

[node name="CampCharacterStatusBox4" parent="PartyStatus" instance=ExtResource("1_nr3ij")]
layout_mode = 2
party_index = 3

[node name="Orbs" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164062
anchor_top = 0.166667
anchor_right = 0.24707
anchor_bottom = 0.278646
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_fmm2y")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="OrbContainer" type="GridContainer" parent="Orbs"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="BlueOrb" type="TextureRect" parent="Orbs/OrbContainer"]
modulate = Color(0.270833, 0.270833, 0.270833, 1)
layout_mode = 2
texture = ExtResource("3_ix0wu")
stretch_mode = 4

[node name="RedOrb" type="TextureRect" parent="Orbs/OrbContainer"]
modulate = Color(0.270833, 0.270833, 0.270833, 1)
layout_mode = 2
texture = ExtResource("3_ix0wu")
stretch_mode = 4

[node name="OrangeOrb" type="TextureRect" parent="Orbs/OrbContainer"]
modulate = Color(0.270833, 0.270833, 0.270833, 1)
layout_mode = 2
texture = ExtResource("3_ix0wu")
stretch_mode = 4

[node name="BlackOrb" type="TextureRect" parent="Orbs/OrbContainer"]
modulate = Color(0.270833, 0.270833, 0.270833, 1)
layout_mode = 2
texture = ExtResource("3_ix0wu")
stretch_mode = 4

[node name="Gil" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0976562
anchor_top = 0.354167
anchor_right = 0.292969
anchor_bottom = 0.40625
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_fmm2y")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Gil"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0833333
anchor_top = 0.5
anchor_right = 0.916667
anchor_bottom = 0.5
offset_top = -22.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "400 G"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.140625
anchor_top = 0.473958
anchor_right = 0.273438
anchor_bottom = 0.927083
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_fmm2y")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.502841
anchor_top = 0.5
anchor_right = 0.502841
anchor_bottom = 0.5
offset_left = -83.5
offset_top = -194.0
offset_right = 83.5
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Items" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Items"
flat = true

[node name="Weapons" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Weapons"
flat = true

[node name="Armour" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Armour"
flat = true

[node name="Options" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Options"
flat = true

[node name="OptionsMenu" parent="." instance=ExtResource("5_fdbx0")]
visible = false
layout_mode = 1

[node name="ConsumablesMenu" parent="." instance=ExtResource("6_mk1em")]
visible = false
layout_mode = 1

[node name="ArmourMenu" parent="." instance=ExtResource("7_d1inv")]
visible = false
layout_mode = 1

[node name="WeaponMenu" parent="." instance=ExtResource("8_lsime")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Buttons/VBoxContainer/Items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Weapons" to="." method="_on_weapons_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Armour" to="." method="_on_armour_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Options" to="." method="_on_options_pressed"]
